src/main/java/com/example/frota/errors/ProdutoIncompativelCaixa.java
package com.example.frota.errors;

public class ProdutoIncompativelCaixa extends RuntimeException {
	
	public ProdutoIncompativelCaixa (String mensagem) {
        super(mensagem);
    }
}
